# rusted-doom-launcher

./: .gitignore  .mcp.json  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: release.yml
content/wads/: 1000-lines-3-community-project.json  50-shades-of-graytall.json  5till-l1-complex.json  abandon.json  absolutely-killed.json  action-doom-2-urban-brawl.json  action-doom.json  alpha-accident-terra-nova.json  ancient-aliens.json  antaresian-reliquary.json  ar-luminae.json  arcadia-demade.json  arrival.json  ashes-afterglow.json  austrian-avian-association.json  avactor-end-of-the-fifth-circle.json  back-to-basics.json  back-to-saturn-x-episode-2.json  back-to-saturn-x.json  base-ganymede-complete.json  bastion-of-chaos.json  bgpa-missions-liberation.json  blade-of-agony-e1.json  breach.json  brigandine.json  brutal-doom.json  cheogsh.json  chex-quest-3.json  chosen.json  cold-as-hell.json  comatose.json  combat-shock-2.json  community-chest-2.json  community-chest-3.json  (+186 more)
scripts/: analyze_wad_urls.py  batch_extract_summaries.py  config.json  fix_idgames_urls.py  fix_wad_urls.py  generate-version.js  generate_wad_entries.py  scrape_cacowards_list.py  scrape_wad_metadata.py  separate_incomplete_wads.py  test_wad_summary.py  validate_wad_entries.py  verify_all_downloads.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  wad_parser.rs
(+29 files in other folders)
