[package]
name = "doom-launcher"
version = "0.1.0"
description = "A Steam-like launcher for Doom WADs"
authors = ["you"]
edition = "2021"

[lib]
name = "doom_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
